--- a/portfolio/src/app.css
+++ b/portfolio/src/app.css
@@ -15,6 +15,8 @@
   --body-color:#F5F5F5;
   --sidebar-color:#FFF;
   --primary-color: #9370DB;
+  --hover-primary-color:#ac73ff;
+  --button-color:#a2a8d3;
   --text-color: #575656;
 
   --tran: all 0.5s ease;
